# ot-labs-docs

./: DEPLOYMENT.md  README.md  index.html  mkdocs.de.yml  mkdocs.en.yml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yaml
de/: 404.html  Container101.html  agenda.html  automation.html  cheatsheet.html  feedback.html  index.html  lab.html  sitemap.xml  slides.html
de/exercises/: appendix.html  ex1-vlan-discovery.html  ex2-arp-spoofing.html  ex3-spanning-tree.html  ex4-link-aggregation.html  ex5-reconnaissance.html  ex6-protocol-discovery.html  ex7-segmentation-firewall.html  index.html
de/llms/: SECURITY_ANALYSIS_SEGMENTED_NETWORK.html
de/search/: search_index.js  search_index.json
docs/: Container101.md  agenda.md  cheatsheet.md  feedback.md  index.md  lab.md  slides.md
docs/de/: Container101.md  agenda.md  automation.md  cheatsheet.md  feedback.md  index.md  lab.md  llms  slides  slides.md
docs/de/exercises/: appendix.md  ex1-vlan-discovery.md  index.md  (+6 more)
docs/en/: Container101.md  agenda.md  automation.md  cheatsheet.md  exercises.md  index.md  lab.md  slides.md
en/: 404.html  Container101.html  agenda.html  automation.html  cheatsheet.html  exercises.html  feedback.html  index.html  lab.html  sitemap.xml  slides.html
en/exercises/: appendix.html  ex1-vlan-discovery.html  ex2-arp-spoofing.html  ex3-spanning-tree.html  ex4-link-aggregation.html  ex5-reconnaissance.html  ex6-protocol-discovery.html  ex7-segmentation-firewall.html  index.html
en/llms/: SECURITY_ANALYSIS_SEGMENTED_NETWORK.html
en/search/: search_index.js  search_index.json
(+10 files in other folders)
