[project]
name = "naf-workshop-nuts"
version = "0.1.0"
description = "OT Attack Mapping & Risk-Based Defense"
authors = [{ name = "Mischa Diehm", email = "mischa.diehm@narrowin.ch" }]
requires-python = "~=3.10"
readme = "README.md"

[dependency-groups]
dev = [
    "mkdocs>=1.6.0,<2",
    "mkdocs-material[imaging]>=9.5.31,<10",
    "mkdocs-with-pdf>=0.9.3,<0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["naf_workshop_nuts"]  # â† or ["src/naf_workshop_nuts"] if you use a src/ layout
