[project]
name = "ot-lab-202511-docs"
version = "0.1.0"
description = "OT Networks: Design & Defend"
authors = [
    { name = "Martin Scheu", email = "martin.scheu@switch.ch" },
    { name = "Mischa Diehm", email = "mischa.diehm@narrowin.ch" }
]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "mkdocs>=1.6.0,<2",
    "mkdocs-material[imaging]>=9.5.31,<10",
    "mkdocs-with-pdf>=0.9.3,<0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docs"]
